# open-interpreter-slack-bot

./: .gcloudignore  .gitignore  Dockerfile  README.md  compose.yml  gcloud_storage.py  helpers.py  interpreter_helper.py  main.py  requirements.txt  service.yaml  slack_api.py
bot/: Dockerfile  config.yaml  gcloud_storage.py  logging_conf.py  main.py  pyproject.toml  utils.py
bot/custom_interpreter/: interpreter_helper.py  respond_hepler.py  utils.py
function-runner/: Dockerfile  Dockerfile.local  main.py  pyproject.toml
